--- a/simbatolls/templates/dashboard.html
+++ b/simbatolls/templates/dashboard.html
@@ -88,6 +88,7 @@
                 };
     
                 Plotly.newPlot('tollsChart', data, layout);
+                Plotly.newPlot('adminFeesChart', data.adminFees);
             })
             .catch(error => console.error('Error fetching data:', error));
         }
