--- a/simbatolls/templates/search_results.html
+++ b/simbatolls/templates/search_results.html
@@ -179,6 +179,7 @@
             <div class="navbar-nav">
                 <a class="nav-item nav-link" href="/">Upload Files</a>
                 <a class="nav-item nav-link" href="/summary">Summary</a>
+                <a class="nav-item nav-link" href="/dashboard">Dashboard</a>
                 <a class="nav-item nav-link active" href="/search">Search Results</a>
             </div>
         </div>
