--- a/simbatolls/templates/summary.html
+++ b/simbatolls/templates/summary.html
@@ -131,6 +131,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-item nav-link" href="/">Upload Files</a>
+                <a class="nav-item nav-link" href="/dashboard">Dashboard</a>
                 <a class="nav-item nav-link" href="/search">Search Results</a>
             </div>
         </div>
