--- a/simbatolls/templates/dashboard.html
+++ b/simbatolls/templates/dashboard.html
@@ -51,6 +51,8 @@
             </div>
         </div>
     </nav>
+
+    <div class=" h-100 d-flex justify-content-center align-items-center"> 
     <div class="container">
         <div class="row">
             <div class="col-12">
@@ -61,7 +63,9 @@
                 <button id="updateButton" class="btn btn-primary">Update</button>
             </div>
         </div>
-        <div id="tollsChart"></div>
+        <div id="tollsChart" style="margin-top: 10px;"></div>
+        <div id="adminFeesChart" style="margin-top: 20px;" ></div>
+
     </div>
 
     <script>
@@ -128,5 +132,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+</div> 
 </body>
 </html>
