--- a/simbatolls/templates/search_results.html
+++ b/simbatolls/templates/search_results.html
@@ -293,6 +293,9 @@
     <script>
         // Function to copy plain text to clipboard
         function copyTextToClipboard(text) {
+        console.log(text);
+        text = 'Hello,'+ '\n\n' + 'Thank you for choosing Simba Car Hire.'+ '\n' + 'Please find below the breakdown for the tolls you have utilised during your recent rental;'+ '\n' + 'Reservation number'+ '\n' + 'And all toll data (table)'+ '\n\n' +  text;
+        console.log(text);
         navigator.clipboard.writeText(text).then(function() {
             console.log('Text copied to clipboard');
         }, function(err) {
