--- a/simbatolls/templates/home.html
+++ b/simbatolls/templates/home.html
@@ -158,6 +158,7 @@
                         <option value="10">Adelaide Melrose Park</option>
                         <option value="18">Cairns City</option>
                         <option value="19">Brisbane Airport</option>
+                        <option value="17">Melbourne airport</option>
                     </select>
                 </div>
             </div>
